# cargo-caw-publish

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: cargo_toml.rs  cli_args.rs  crates_io.rs  exec_cargo_package.rs  exec_cargo_publish.rs  exec_cargo_version.rs  lib.rs  logger.rs  main.rs
