[package]
name = "cargo-is-version-published"
version = "0.2.0"
edition = "2021"
authors = ["Ramon Moraes"]
description = "a cargo command to check if a Cargo.toml version was published without panic."
license = "MIT"
documentation = "https://docs.rs/cargo-is-version-published/latest/cargo-is-version-published/"
homepage = "https://github.com/rmoraes92/cargo-is-version-published"

[[bin]]
name = "cargo-is-version-published"

[dependencies]
anyhow = "1.0.91"
cfo = "0.1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
sha256 = "1.5.0"
toml = "0.8.19"
