[package]
name = "cargo-caw-publish"
version = "0.1.1"
edition = "2021"
authors = ["Ramon Moraes <ramonmoraes.foss@gmail.com>"]
description = "A thin wrapper around `cargo publish` that verifies if a crate is publishable taking on account both version string and checksum."
license = "MIT"
documentation = "https://docs.rs/cargo-caw-publish/latest/cargo-caw-publish/"
homepage = "https://github.com/rmoraes92/cargo-caw-publish"

[[bin]]
name = "cargo-caw-publish"

[dependencies]
anyhow = "1.0.97"
cfo = "0.1.0"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
log4rs = "1.3.0"
reqwest = { version = "0.12.13", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
string_from = "0.1.0"
toml = "0.8.20"
